--- a/RecipeManager/Views/CreateRecipeCategory.xaml
+++ b/RecipeManager/Views/CreateRecipeCategory.xaml
@@ -9,29 +9,28 @@
         Name="RecipeManager" Icon="Icons/window-icon.png">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0">Kategori navn</Label>
-        <TextBox x:Name="RecipeCategoryTextBox" Grid.Column="1" Grid.Row="0"></TextBox>
+        <TextBox x:Name="RecipeCategoryTextBox" Grid.Column="1" Grid.Row="0" />
         <Button Grid.Row="1" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="SaveRecipeCategory">Gem Kateogri</Button>
         <Label Grid.Column="0" Grid.Row="2">Kategorier</Label>
         <ListBox x:Name="ListBoxRecipeCategories" Grid.Column="2" Grid.Row="2">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="0,2">
-                        <TextBlock Text="{Binding Name}"></TextBlock>
+                        <TextBlock Text="{Binding Name}" />
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
 
 
-        
     </Grid>
 </Window>
