--- a/RecipeManager/Views/Scrape.xaml
+++ b/RecipeManager/Views/Scrape.xaml
@@ -36,33 +36,36 @@
         </ComboBox>
         <Label Grid.Row="2" Grid.Column="0">URL:</Label>
         <TextBox x:Name="URLInput" Grid.Column="1" Grid.Row="2">https://www.valdemarsro.dk/pasta-arrabiata/</TextBox>
-        <Button x:Name="GetRecipeButton" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,5,0,0" Click="GetRecipeInitializeProcess">Hent opskrift</Button>
+        <Button x:Name="GetRecipeButton" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,5,0,0"
+                Click="GetRecipeInitializeProcess">
+            Hent opskrift
+        </Button>
         <!-- The verification step of the procedure -->
-        <TextBlock Name="NotificationTextBlock" TextWrapping="WrapWithOverflow" Grid.Row="4" Grid.ColumnSpan="2"></TextBlock>
+        <TextBlock Name="NotificationTextBlock" TextWrapping="WrapWithOverflow" Grid.Row="4" Grid.ColumnSpan="2" />
         <Grid Grid.Row="5" Grid.ColumnSpan="2" Margin="10" HorizontalAlignment="Stretch">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/> 
-                <RowDefinition Height="Auto"/> 
-                <RowDefinition Height="Auto"/> 
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <TextBlock x:Name="AmountGuess" Grid.Row="1" Grid.Column="0"></TextBlock>
-            <TextBlock x:Name="UnitGuess" Grid.Row="1" Grid.Column="1"></TextBlock>
-            <TextBlock x:Name="NameGuess" Grid.Row="1" Grid.Column="2"></TextBlock>
-            
-            <TextBox x:Name="ValueConfirmed" Grid.Row="2" Grid.Column="0"></TextBox>
+            <TextBlock x:Name="AmountGuess" Grid.Row="1" Grid.Column="0" />
+            <TextBlock x:Name="UnitGuess" Grid.Row="1" Grid.Column="1" />
+            <TextBlock x:Name="NameGuess" Grid.Row="1" Grid.Column="2" />
+
+            <TextBox x:Name="ValueConfirmed" Grid.Row="2" Grid.Column="0" />
             <ComboBox x:Name="ComboBoxUnit" Grid.Row="2" Grid.Column="1" Margin="2,0,2,0"
-                      ItemsSource="{Binding Source={local:EnumBindingSource {x:Type models:Units}}}"/>
-            <ComboBox x:Name="CommodityName" Grid.Row="2" Grid.Column="2" Margin="2,0,2,0" 
-                      IsTextSearchEnabled="True"    IsEditable="True" >
+                      ItemsSource="{Binding Source={local:EnumBindingSource {x:Type models:Units}}}" />
+            <ComboBox x:Name="CommodityName" Grid.Row="2" Grid.Column="2" Margin="2,0,2,0"
+                      IsTextSearchEnabled="True" IsEditable="True">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding }"></TextBlock>
+                        <TextBlock Text="{Binding }" />
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
